remove ddl-auto for safety

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.datasource.username=sql9579691
 spring.datasource.password=mMHEz3f4yK
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 #set below to none if schema does not need to be re-created
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
