--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,10 @@ spring.datasource.url=jdbc:mysql://sql9.freesqldatabase.com:3306/sql9579691
 spring.datasource.username=sql9579691
 spring.datasource.password=mMHEz3f4yK
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-#set below to none if schema does not need to be re-created
+
+# set below to none if schema does not need to be re-created
 spring.jpa.hibernate.ddl-auto=none
+
+# init data load only works with spring.jpa.hibernate.ddl-auto=none. So, create the tables and then restart the server to run SQL commands from data.sql
+# set spring.sql.init.mode=never to stop running the DMLs on app start
+spring.sql.init.mode=never
