Email module added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,10 @@ spring.jpa.hibernate.ddl-auto=none
 # init data load only works with spring.jpa.hibernate.ddl-auto=none. So, create the tables and then restart the server to run SQL commands from data.sql
 # set spring.sql.init.mode=never to stop running the DMLs on app start
 spring.sql.init.mode=never
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=uiuc409fp@gmail.com
+spring.mail.password=hzlnkcfscbqoqmna
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
