Email integration with slot booking

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,8 @@ spring.jpa.hibernate.ddl-auto=none
 # set spring.sql.init.mode=never to stop running the DMLs on app start
 spring.sql.init.mode=never
 
+mail.enable=false
+
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=uiuc409fp@gmail.com
