--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,10 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 			<version>3.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-freemarker</artifactId>
+		</dependency>
 	</dependencies>
 
 
