Cron job and health check ep

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,5 @@ spring.mail.username=uiuc409fp@gmail.com
 spring.mail.password=hzlnkcfscbqoqmna
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+base.url=https://llaminators-fp-service.onrender.com
