--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://sql9.freesqldatabase.com:3306/sql9579691
-spring.datasource.username=sql9579691
-spring.datasource.password=mMHEz3f4yK
+spring.datasource.url=jdbc:mysql://uns7zbaf3krppqew:zFC6jk3Xe4qm7tWRSfT@bo6g4c7f1x2hdixx0oim-mysql.services.clever-cloud.com:21283/bo6g4c7f1x2hdixx0oim
+spring.datasource.username=uns7zbaf3krppqew
+spring.datasource.password=zFC6jk3Xe4qm7tWRSfT
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 # set below to none if schema does not need to be re-created
