--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.jpa.hibernate.ddl-auto=none
 # set spring.sql.init.mode=never to stop running the DMLs on app start
 spring.sql.init.mode=never
 
-mail.enable=false
+mail.enable=true
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
