--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://uns7zbaf3krppqew:zFC6jk3Xe4qm7tWRSfT@bo6g4c7f1x2hdixx0oim-mysql.services.clever-cloud.com:21283/bo6g4c7f1x2hdixx0oim
+spring.datasource.url=jdbc:mysql://uns7zbaf3krppqew:zFC6jk3Xe4qm7tWRSfT@hv-mtl2-010.clvrcld.net:10447/bo6g4c7f1x2hdixx0oim
 spring.datasource.username=uns7zbaf3krppqew
 spring.datasource.password=zFC6jk3Xe4qm7tWRSfT
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
