some new APIs for profile page

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.datasource.url=jdbc:mysql://uns7zbaf3krppqew:zFC6jk3Xe4qm7tWRSfT@hv-mtl2-
 spring.datasource.username=uns7zbaf3krppqew
 spring.datasource.password=zFC6jk3Xe4qm7tWRSfT
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.datasource.hikari.max-lifetime=30000
 
 # set below to none if schema does not need to be re-created
 spring.jpa.hibernate.ddl-auto=none
@@ -21,3 +22,4 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 base.url=https://llaminators-fp-service.onrender.com
 cron.enable=true
+
